# nuntius-linux

./: AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  createcert.sh  git.mk  server.crt  server.csr  server.key
.tx/: config
data/: org.holylobster.nuntius.appdata.xml.in  org.holylobster.nuntius.desktop  org.holylobster.nuntius.desktop.in  org.holylobster.nuntius.gschema.xml.in  org.holylobster.nuntius.service.in
data/icons/: render-bitmaps.rb
gentoo/gnome-extra/nuntius/: nuntius-9999.ebuild
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  es.po  nuntius.pot  pl.po  ru.po  sk.po
src/: application.vala  appslist.vala  appslistpanel.vala  client.vala  config.vapi  connection.vala  main.vala  mdns.vala  notification.vala  notificationapp.vala  notificationcounter.vala  notificationsview.vala  notificationview.vala  qrencode.vapi  qrimage.vala  smsnotification.vala  testview.vala  window.vala
src/resources/: nuntius.gresource.xml
src/resources/css/: nuntius-style.css
src/resources/gtk/: menus.ui
src/resources/ui/: approw.ui  appslistpanel.ui  notificationcounter.ui  window.ui
tests/: qrtest.vala
